Integracion de formularios(falta Footer)

--- a/tpFinal.html
+++ b/tpFinal.html
@@ -145,7 +145,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                  <h4 class="modal-title" id="contact-modal-label">Formulario de Precio</h4>
+                  <h4 class="modal-title" id="contact-modal-label">Formulario de Precio (Viajes nacionales)</h4>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
 
